src/main/java/org/example/filestorageapi/errors/ResourceNotFoundException.java
package org.example.filestorageapi.errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
